File: anagram.c
Original provenience: unknown
Source: unknown 

2016-03-22
- Added forward declarations for all functions.
- Renamed function main to anagram_main.
- Added function anagram_init that calls anagram_ReadDict, removed
  call to anagram_ReadDict from anagram_main.
- Added function anagram_return that handles the return value.  
- Added new function main that first calls anagram_init, 
  then anagram_main and finally returns the return value of 
  anagram_return.
- Added generic TACLeBench header to all files.
- Introduced comments to split file in sections for type 
  definitions, forward declarations, global variables, 
  initialization-related and return-value-related functions, 
  core benchmark functions, and main routine.
- Renamed ch2i, DICTWORDS, Quad, MASK_BITS, MAX_QUADS, MAXCAND,
  MAXSOL, ALPHABET, Word, PWord, PPWord, apwCand, cpwCand, Letter,
  PLetter, alPhrase, cchPhraseLength, aqMainMask, aqMainSign,
  cchMinLength, auGlobalFrequency, achByFrequency, pchDictionary,
  Reset, ReadDict, BuildMask, NewWord, NextWord, BuildWord,
  AddWords, apwSol, cpwLast, OneStep, DumpWords, FindAnagram and
  SortCandidates to anagram_ch2i, anagram_DICTWORDS, anagram_Quad,
  anagram_MASK_BITS, anagram_MAX_QUADS, anagram_MAXCAND,
  anagram_MAXSOL, anagram_ALPHABET, anagram_Word, anagram_PWord,
  anagram_PPWord, anagram_apwCand, anagram_cpwCand, anagram_Letter,
  anagram_PLetter, anagram_alPhrase, anagram_cchPhraseLength,
  anagram_aqMainMask, anagram_aqMainSign, anagram_cchMinLength,
  anagram_auGlobalFrequency, anagram_achByFrequency,
  anagram_pchDictionary, anagram_Reset, anagram_ReadDict,
  anagram_BuildMask, anagram_NewWord, anagram_NextWord,
  anagram_BuildWord, anagram_AddWords, anagram_apwSol,
  anagram_cpwLast, anagram_OneStep, anagram_DumpWords,
  anagram_FindAnagram and anagram_SortCandidates.
- Renamed swapi, pivot, qsorts, simulated_heap and freeHeapPos to
  anagram_swapi, anagram_pivot, anagram_qsorts,